[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://mode/graph/Graph.tscn" type="PackedScene" id=2]
[ext_resource path="res://mode/spatial/Spatial.tscn" type="PackedScene" id=3]
[ext_resource path="res://mode/tilemap/TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://img/banner_blur.png" type="Texture" id=5]
[ext_resource path="res://hud/HUD.gd" type="Script" id=7]
[ext_resource path="res://hud/HUD_Details.gd" type="Script" id=9]
[ext_resource path="res://hud/HUD_Boards.gd" type="Script" id=10]
[ext_resource path="res://hud/HUD_Placeholder.gd" type="Script" id=11]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Graph" parent="." instance=ExtResource( 2 )]

[node name="TileMap" parent="." instance=ExtResource( 4 )]

[node name="Spatial" parent="." instance=ExtResource( 3 )]

[node name="HUD" type="Node" parent="."]
script = ExtResource( 7 )

[node name="FileDialog" type="FileDialog" parent="HUD"]
margin_left = 317.77
margin_top = 55.5921
margin_right = 728.77
margin_bottom = 274.592
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "/hwstudio"
current_path = "/hwstudio/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="HUD"]

[node name="Menu" type="MarginContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="HUD/Menu"]
margin_right = 1356.0
margin_bottom = 758.0

[node name="Repositories" type="Tabs" parent="HUD/Menu/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="HUD/Menu/TabContainer/Repositories"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer"]
margin_right = 668.0
margin_bottom = 722.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Files" type="Tree" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer/VSplitContainer"]
margin_right = 668.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Libraries" type="Tree" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer/VSplitContainer"]
margin_top = 367.0
margin_right = 668.0
margin_bottom = 722.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer"]
margin_left = 680.0
margin_right = 1348.0
margin_bottom = 722.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer/HSplitContainer"]
margin_right = 328.0
margin_bottom = 722.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer/HSplitContainer"]
margin_left = 340.0
margin_right = 668.0
margin_bottom = 722.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer/HSplitContainer/VSplitContainer"]
margin_right = 328.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer/HSplitContainer/VSplitContainer"]
margin_top = 367.0
margin_right = 328.0
margin_bottom = 722.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer/HSplitContainer/VSplitContainer/VSplitContainer"]
margin_right = 328.0
margin_bottom = 171.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="HUD/Menu/TabContainer/Repositories/HSplitContainer/HSplitContainer/VSplitContainer/VSplitContainer"]
margin_top = 183.0
margin_right = 328.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Placeholder" type="Tabs" parent="HUD/Menu/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 11 )

[node name="VSplitContainer" type="VSplitContainer" parent="HUD/Menu/TabContainer/Placeholder"]
anchor_right = 0.3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="HUD/Menu/TabContainer/Placeholder/VSplitContainer"]
margin_right = 395.4
margin_bottom = 175.0
rect_min_size = Vector2( 0, 175 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Design" type="Tree" parent="HUD/Menu/TabContainer/Placeholder/VSplitContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Details" type="GridContainer" parent="HUD/Menu/TabContainer/Placeholder/VSplitContainer"]
margin_top = 187.0
margin_right = 395.4
margin_bottom = 201.0
script = ExtResource( 9 )

[node name="Label" type="Label" parent="HUD/Menu/TabContainer/Placeholder/VSplitContainer/Details"]
margin_right = 82.0
margin_bottom = 14.0
text = "Block details"

[node name="Boards" type="Tabs" parent="HUD/Menu/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Menu/TabContainer/Boards"]

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Menu/TabContainer/Boards/VBoxContainer"]
margin_right = 154.0
margin_bottom = 20.0

[node name="SelectPart" type="OptionButton" parent="HUD/Menu/TabContainer/Boards/VBoxContainer/HBoxContainer"]
margin_right = 75.0
margin_bottom = 20.0
rect_min_size = Vector2( 75, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectBoard" type="OptionButton" parent="HUD/Menu/TabContainer/Boards/VBoxContainer/HBoxContainer"]
margin_left = 79.0
margin_right = 154.0
margin_bottom = 20.0
rect_min_size = Vector2( 75, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preferences" type="Tabs" parent="HUD/Menu/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="HUD/Menu/TabContainer/Preferences"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sections" type="VBoxContainer" parent="HUD/Menu/TabContainer/Preferences/Scroll"]
margin_right = 1338.0
margin_bottom = 712.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backend" type="VBoxContainer" parent="HUD/Menu/TabContainer/Preferences/Scroll/Sections"]
margin_right = 1338.0
margin_bottom = 712.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HUD/Menu/TabContainer/Preferences/Scroll/Sections/Backend"]
margin_right = 1338.0
margin_bottom = 14.0
text = "Backend"

[node name="Type" type="HBoxContainer" parent="HUD/Menu/TabContainer/Preferences/Scroll/Sections/Backend"]
margin_left = 5.0
margin_top = 18.0
margin_right = 1338.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="HUD/Menu/TabContainer/Preferences/Scroll/Sections/Backend/Type"]
margin_top = 5.0
margin_right = 28.0
margin_bottom = 19.0
text = "type"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HUD/Menu/TabContainer/Preferences/Scroll/Sections/Backend/Type"]
margin_left = 32.0
margin_right = 1333.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OSVB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Address" type="HBoxContainer" parent="HUD/Menu/TabContainer/Preferences/Scroll/Sections/Backend"]
margin_left = 5.0
margin_top = 46.0
margin_right = 1338.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="HUD/Menu/TabContainer/Preferences/Scroll/Sections/Backend/Address"]
margin_top = 5.0
margin_right = 88.0
margin_bottom = 19.0
text = "address[:port]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HUD/Menu/TabContainer/Preferences/Scroll/Sections/Backend/Address"]
margin_left = 92.0
margin_right = 1290.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "127.0.0.1:8000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Test" type="Button" parent="HUD/Menu/TabContainer/Preferences/Scroll/Sections/Backend/Address"]
margin_left = 1294.0
margin_right = 1333.0
margin_bottom = 24.0
text = "Test"

[node name="About" type="MarginContainer" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HUD/About"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1246.0
margin_bottom = 688.0

[node name="CenterContainer" type="CenterContainer" parent="HUD/About/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1119.0
margin_bottom = 601.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/About/PanelContainer/CenterContainer"]
margin_left = 123.0
margin_top = 73.0
margin_right = 989.0
margin_bottom = 521.0
custom_constants/separation = 15

[node name="Banner" type="TextureRect" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer"]
margin_right = 826.0
margin_bottom = 256.0
texture = ExtResource( 5 )
stretch_mode = 6

[node name="CenterContent" type="CenterContainer" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer"]
margin_top = 271.0
margin_right = 826.0
margin_bottom = 398.0

[node name="VBoxContent" type="VBoxContainer" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent"]
margin_left = 252.0
margin_right = 574.0
margin_bottom = 127.0
custom_constants/separation = 15

[node name="HBoxData" type="HBoxContainer" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent"]
margin_right = 322.0
margin_bottom = 92.0
custom_constants/separation = 15

[node name="VBoxLabels" type="VBoxContainer" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData"]
margin_right = 103.0
margin_bottom = 92.0

[node name="VerLabel" type="Label" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData/VBoxLabels"]
margin_right = 103.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Version:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LicLabel" type="Label" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData/VBoxLabels"]
margin_top = 24.0
margin_right = 103.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
text = "License:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepoLabel" type="Label" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData/VBoxLabels"]
margin_top = 48.0
margin_right = 103.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 20 )
text = "Sources:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DocLabel" type="Label" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData/VBoxLabels"]
margin_top = 72.0
margin_right = 103.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 20 )
text = "Documentation:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxValues" type="VBoxContainer" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData"]
margin_left = 118.0
margin_right = 322.0
margin_bottom = 92.0

[node name="VerStr" type="Label" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData/VBoxValues"]
margin_right = 204.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "v0.0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LicStr" type="Label" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData/VBoxValues"]
margin_top = 24.0
margin_right = 204.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 20 )
text = "undefined"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepoLink" type="LinkButton" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData/VBoxValues"]
margin_top = 48.0
margin_right = 204.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 20 )
text = "github.com/umarcor/hwstudio"
underline = 1

[node name="DocLink" type="LinkButton" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/HBoxData/VBoxValues"]
margin_top = 72.0
margin_right = 204.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 20 )
text = "umarcor.github.io/hwstudio/doc"
underline = 1

[node name="CenterContrib" type="CenterContainer" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent"]
margin_top = 107.0
margin_right = 322.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thanks" type="Label" parent="HUD/About/PanelContainer/CenterContainer/VBoxContainer/CenterContent/VBoxContent/CenterContrib"]
margin_left = 65.0
margin_right = 256.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "Thanks to all the contributors!"
__meta__ = {
"_edit_use_anchors_": false
}
